enable disqus & remove ads

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -133,6 +133,11 @@ layout: default
     })();
 </script>
 <!-- disqus 公共JS代码 end -->
+<!-- Disqus ads block -->
+<style>
+/*disqus Ads block with CSS*/
+iframe[sandbox="allow-forms allow-popups allow-same-origin allow-scripts"]{display:none!important;}
+</style>
 {% endif %}
 
 
