--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -118,13 +118,14 @@
 <!-- Google Analytics -->
 {% if site.ga_track_id %}
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YVSXN5NVF"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga_track_id }}"></script>
 <script>
+  var _gaId = '{{ site.ga_track_id }}';
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8YVSXN5NVF');
+  gtag('config', _gaId);
 </script>
 {% endif %}
 
